# autopkgtest-runner

./: README.md  autopkgtest-runner.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: autopkgtest-runner.install  changelog  control  copyright  files  watch
debian/upstream/: metadata
po/: autopkgtest-runner.pot  sv.mo  sv.po
src/autopkgtest_runner/: main.py
