[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopkgtest-runner"
version = "0.1.0"
description = "GTK4 frontend for autopkgtest Debian test framework"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
autopkgtest-runner = "autopkgtest_runner.main:main"

[tool.setuptools.packages.find]
where = ["src"]
